# TM-ToDo

./: .gitignore  CMakeLists.txt  README.md  apps.yaml  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
apps/app_cloud/: CMakeLists.txt
apps/app_local/: CMakeLists.txt  app_local.c  idf_component.yml
components/todo_common/: CMakeLists.txt
docs/: APP_API.md
docs/agents/: CONTEXT.md  PREFERENCES.md  README.md
docs/agents/skills/: add-an-app.md  build-and-flash.md  debugging.md  onboarding-and-ota.md
main/: CMakeLists.txt  main.c
tools/: build.py  compose_apps.py  flash.py  ota_serve.py
